@@ -138,7 +138,18 @@
                     </execution>
                 </executions>
             </plugin>
-                        
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-XX:MaxPermSize=512M</argLine>
+                    <includes>
+                        <include>eu/fourFinance/testsuites/IntegrationTestSuite.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
+                                    
 <!--             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat6-maven-plugin</artifactId>
